[gd_scene load_steps=5 format=3 uid="uid://gduetrgv0mlu"]

[ext_resource type="Script" path="res://src/menu/main.gd" id="1_x73ka"]
[ext_resource type="Texture2D" uid="uid://ckdrjhadci0tk" path="res://sprites/menu/play.png" id="3_f6rw1"]
[ext_resource type="Texture2D" uid="uid://cqhmu0o358i1o" path="res://sprites/menu/options.png" id="4_60ald"]
[ext_resource type="Texture2D" uid="uid://dsm8iw4lr51s" path="res://sprites/menu/exit.png" id="5_he2m7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x73ka")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 134.0
offset_bottom = 206.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Witches' Duel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 20.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Play" type="Button" parent="Buttons"]
texture_filter = 1
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
icon = ExtResource("3_f6rw1")
icon_alignment = 1
expand_icon = true

[node name="Options" type="Button" parent="Buttons"]
texture_filter = 1
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
icon = ExtResource("4_60ald")
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="Buttons"]
texture_filter = 1
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
icon = ExtResource("5_he2m7")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
